Feature: Add user context experience on Todo Module