@@ -4,53 +4,79 @@ import gse.home.personalmanager.todo.application.dto.TodoDTO;
 import gse.home.personalmanager.todo.application.mapper.TodoMapper;
 import gse.home.personalmanager.todo.application.service.ai.TodoTitleEnhancer;
 import gse.home.personalmanager.todo.infrastructure.repository.TodoRepository;
+import gse.home.personalmanager.user.domain.model.AppUser;
+import gse.home.personalmanager.user.domain.model.AppUserPrincipal;
+import jakarta.persistence.EntityManager;
+import jakarta.transaction.Transactional;
 import lombok.AllArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Service
 @AllArgsConstructor
 public class TodoUseCaseService {
-
+    private final EntityManager entityManager;
     private final TodoRepository todoRepository;
     private final TodoMapper todoMapper;
     private final TodoTitleEnhancer todoTitleEnhancer;
 
     public List<TodoDTO> getAllTodos() {
-        log.info("UseCaseService: Getting all todos");
-        var todos = todoRepository.findAll();
-        return todos.stream().map(todoMapper::toDto).collect(Collectors.toList());
+        var userId = getUserId();
+        log.info("UseCaseService: Getting all todos for user id: {}.", userId);
+        return todoRepository.findAllByUserId(userId).stream()
+                .map(todoMapper::toDto)
+                .toList();
     }
 
-    public Integer createTodo(final TodoDTO todoDTO) {
+    public Long createTodo(final TodoDTO todoDTO) {
         log.info("UseCaseService: Creating a new todo");
-        todoTitleEnhancer.getEnhancedTitle(todoDTO.getTitle());
-        var entity = todoRepository.save(todoMapper.toEntity(todoDTO));
-        return entity.getId();
+        // Extract the enhanced title logic and apply it to the entity
+//        String enhancedTitle = todoTitleEnhancer.getEnhancedTitle(todoDTO.getTitle());
+
+        var entity = todoMapper.toEntity(todoDTO);
+//        entity.setEnhancedTitle(enhancedTitle);
+        entity.setUser(getUserReference());
+
+        return todoRepository.save(entity).getId();
     }
 
-    public void updateTodo(final Integer id, final TodoDTO todoDTO) {
-        log.info("UseCaseService: Updating the todo id: {}", id);
-        todoRepository.findById(id).ifPresentOrElse(
-                todo -> {
-                    log.info("Todo with id: {} found, proceeding to update", id);
-                    todoDTO.setId(id);
-                    todoRepository.save(todoMapper.toEntity(todoDTO));
-                }
-                , () -> {
+    @Transactional
+    public void updateTodo(final Long id, final TodoDTO todoDTO) {
+        var userId = getUserId();
+        log.info("UseCaseService: Updating the todo id: {}, and UserId : {}", id, userId);
+
+        // Use orElseThrow to flatten the logic and handle "not found" case explicitly
+        var entity = todoRepository.findByIdAndUserId(id, userId)
+                .orElseThrow(() -> {
                     log.error("Todo with id: {} not found, cannot update", id);
-                    throw new RuntimeException("Todo not found");
-                }
-        );
+                    return new RuntimeException("Todo not found");
+                });
+
+        log.info("Todo with id: {} found, proceeding to update", id);
+
+        entity.setCompleted(todoDTO.getCompleted());
+
+        todoRepository.save(entity);
     }
 
-    public void deleteTodo(final Integer id) {
-        log.info("UseCaseService: Deleting the todo id: {}", id);
-        todoRepository.deleteById(id);
+    @Transactional
+    public void deleteTodo(final Long userId, final Long id) {
+        log.info("UseCaseService: Deleting the todo id: {} for user: {}", id, userId);
+        todoRepository.deleteByIdAndUserId(id, userId);
     }
 
+    public Long getUserId() {
+        var principal = (AppUserPrincipal) SecurityContextHolder.getContext().getAuthentication().getPrincipal();
+        return principal.getUser().getId();
+    }
+
+    public AppUser getUserReference() {
+        var userId = getUserId();
+        return entityManager.getReference(AppUser.class, userId);
+
+    }
 }
